welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: value len
  while (nums(z)!= lookingFor && z<=len(nums)){
                                    ^